--- a/package.json
+++ b/package.json
@@ -9,18 +9,68 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bryntum/calendar": "npm:@bryntum/calendar-trial@^6.1.2",
+    "@bryntum/calendar-react": "^6.1.2",
+    "@hookform/resolvers": "^3.9.0",
+    "@progress/kendo-data-query": "latest",
+    "@progress/kendo-date-math": "latest",
+    "@progress/kendo-drawing": "latest",
+    "@progress/kendo-inputs-common": "latest",
+    "@progress/kendo-intl": "latest",
+    "@progress/kendo-licensing": "latest",
+    "@progress/kendo-popup-common": "latest",
+    "@progress/kendo-react-animation": "latest",
+    "@progress/kendo-react-buttons": "latest",
+    "@progress/kendo-react-common": "latest",
+    "@progress/kendo-react-dateinputs": "latest",
+    "@progress/kendo-react-dialogs": "latest",
+    "@progress/kendo-react-dropdowns": "latest",
+    "@progress/kendo-react-form": "latest",
+    "@progress/kendo-react-inputs": "latest",
+    "@progress/kendo-react-intl": "latest",
+    "@progress/kendo-react-labels": "latest",
+    "@progress/kendo-react-layout": "latest",
+    "@progress/kendo-react-popup": "latest",
+    "@progress/kendo-react-progressbars": "latest",
+    "@progress/kendo-react-scheduler": "latest",
+    "@progress/kendo-react-treeview": "latest",
+    "@progress/kendo-svg-icons": "latest",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.0",
+    "cldr-core": "^41.0.0",
+    "cldr-dates-full": "^41.0.0",
+    "cldr-numbers-full": "^41.0.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.445.0",
+    "moment": "^2.30.1",
+    "next": "14.2.13",
+    "prop-types": "15.8.1",
     "react": "^18",
+    "react-big-calendar": "^1.15.0",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-transition-group": "4.4.2",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.11",
+    "@types/react-big-calendar": "^1.8.12",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "typescript": "^5"
   }
 }
