--- a/package.json
+++ b/package.json
@@ -48,22 +48,27 @@
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.34",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "cldr-core": "^41.0.0",
     "cldr-dates-full": "^41.0.0",
     "cldr-numbers-full": "^41.0.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.445.0",
     "moment": "^2.30.1",
     "next": "14.2.13",
     "prop-types": "15.8.1",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.15.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-tooltip": "^5.28.0",
     "react-transition-group": "4.4.2",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.5.2",
@@ -74,6 +79,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18.3.11",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-big-calendar": "^1.8.12",
     "@types/react-dom": "^18",
     "axios": "^1.7.7",
