--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-tooltip": "^5.28.0",
     "react-transition-group": "4.4.2",
     "redux-persist": "^6.0.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
