--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "react-tooltip": "^5.28.0",
     "react-transition-group": "4.4.2",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tslib": "^2.8.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
@@ -81,6 +83,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-big-calendar": "^1.8.12",
     "@types/react-dom": "^18",
+    "@types/socket.io-client": "^1.4.36",
     "axios": "^1.7.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
